[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "parsect"
author = "Abhinav Ramesh Kashyap"
author-email = "abhinav@comp.nus.edu.sg"
home-page = "https://www.abhinavkashyap.io"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
sciwing = "parsect.commands.sciwing:main"