[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "sciwing"
author = "Abhinav Ramesh Kashyap"
author-email = "abhinav@comp.nus.edu.sg"
home-page = "https://www.abhinavkashyap.io"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
sciwing = "sciwing.commands.sciwing:main"